...
import androidx.compose.material.icons.filled.AutoAwesome

sealed class BottomNavItem(var title: String, var icon: ImageVector, var route: String) {
    object Home : BottomNavItem("Home", Icons.Filled.Home, "home")
    object Calendar : BottomNavItem("Calendar", Icons.Filled.DateRange, "calendar")
    object Timetable : BottomNavItem("Timetable", Icons.Filled.List, "timetable")
    object Subjects : BottomNavItem("Subjects", Icons.Filled.Star, "subjects")
    object Announcements : BottomNavItem("Notices", Icons.Filled.Notifications, "announcements")
}

@Composable
fun BottomNavigationBar(navController: NavController) {
    val items = listOf(
...
